<resources>
    <string name="app_name">Infit</string>
    <string name="update_photo">Update\nPhoto</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="phone">Phone no.</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="about">About</string>
    <string name="plan">Plan</string>
    <string name="select">Select</string>
    <string name="select_plan">Select Plan</string>
    <string name="muscle_plan">Muscle Plan</string>
    <string name="weight_loss_plan">Weight Loss Plan</string>
    <string name="day_17_diet_plan">17-day Diet Plan</string>
    <string name="protein_diet_plan">Protein Diet Plan</string>
    <string name="daily_diet_plan">Daily Diet Plan</string>
    <string name="keto_diet_plan">Keto Diet Plan</string>
    <string name="duration">Duration</string>
    <string name="welcome_back">Welcome back</string>
    <string name="upcoming_consultations">Upcoming Consultations</string>
    <string name="patient_profiles">Patient Profiles</string>
    <string name="select_duration">Select Duration</string>
    <string name="month_2">2 Months</string>
    <string name="month_6">6 Months</string>
    <string name="month_8">8 Months</string>
    <string name="month_10">10 Months</string>
    <string name="month_12">12 Months</string>
    <string name="month_18">18 Months</string>
    <string name="messages">Messages\n</string>
    <string name="reports">Reports\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unread_messages">Unread Messages</string>
    <string name="customer_reviews">Customer Reviews</string>
    <string name="view_more">View more</string>
    <string name="title_activity_final_recipe">FinalRecipe</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="calories">Calories</string>
    <string name="fats">Fats</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temporLorem ipsum dolor sit amet</string>
    <string name="question">Question</string>
    <string name="answer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="search">Search</string>
</resources>