<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/select_plan_bg">
    <TextView
        android:layout_width="85dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/select_duration"
        android:fontFamily="@font/nats_font"
        android:textSize="15sp"
        android:textColor="#000000"
        android:layout_marginBottom="5dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <RadioButton
            android:id="@+id/duration_2"
            android:layout_width="62dp"
            android:layout_height="25dp"
            android:button="@android:color/transparent"
            android:background="@drawable/selector_checkbox_bg"
            android:fontFamily="@font/nats_font"
            android:text="@string/month_2"
            android:textSize="11sp"
            android:textColor="@color/selector_checkbox_text"
            android:paddingHorizontal="11dp" />
        <RadioButton
            android:id="@+id/duration_6"
            android:layout_width="62dp"
            android:layout_height="25dp"
            android:layout_marginTop="-25dp"
            android:button="@android:color/transparent"
            android:background="@drawable/selector_checkbox_bg"
            android:fontFamily="@font/nats_font"
            android:text="@string/month_6"
            android:textSize="11sp"
            android:textColor="@color/selector_checkbox_text"
            android:paddingHorizontal="11dp"
            android:layout_marginStart="70dp"/>
        <RadioButton
            android:id="@+id/duration_8"
            android:layout_width="62dp"
            android:layout_height="25dp"
            android:button="@android:color/transparent"
            android:background="@drawable/selector_checkbox_bg"
            android:fontFamily="@font/nats_font"
            android:text="@string/month_8"
            android:textSize="11sp"
            android:textColor="@color/selector_checkbox_text"
            android:paddingHorizontal="11dp"
            android:layout_marginVertical="5dp"/>
        <RadioButton
            android:id="@+id/duration_10"
            android:layout_width="62dp"
            android:layout_height="25dp"
            android:button="@android:color/transparent"
            android:background="@drawable/selector_checkbox_bg"
            android:fontFamily="@font/nats_font"
            android:text="@string/month_10"
            android:textSize="11sp"
            android:textColor="@color/selector_checkbox_text"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="-30dp"
            android:layout_marginStart="70dp"
            android:layout_marginBottom="5dp"/>
        <RadioButton
            android:id="@+id/duration_12"
            android:layout_width="62dp"
            android:layout_height="25dp"
            android:button="@android:color/transparent"
            android:background="@drawable/selector_checkbox_bg"
            android:fontFamily="@font/nats_font"
            android:text="@string/month_12"
            android:textSize="11sp"
            android:textColor="@color/selector_checkbox_text"
            android:paddingHorizontal="10dp"/>
        <RadioButton
            android:id="@+id/duration_18"
            android:layout_width="62dp"
            android:layout_height="25dp"
            android:button="@android:color/transparent"
            android:background="@drawable/selector_checkbox_bg"
            android:fontFamily="@font/nats_font"
            android:text="@string/month_18"
            android:textSize="11sp"
            android:textColor="@color/selector_checkbox_text"
            android:paddingHorizontal="10dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="-25dp"/>
    </RadioGroup>
    <ImageButton
        android:id="@+id/done_duration"
        android:layout_width="92dp"
        android:layout_height="33dp"
        android:background="@drawable/done_btn"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="6dp"/>
</LinearLayout>