<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="40dp">
            <ImageButton
                android:id="@+id/profile"
                android:layout_width="145dp"
                android:layout_height="145dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/add_client_upload_photo" />
            <TextView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/name"
                style="@style/label_text"/>
            <EditText
                android:id="@+id/name"
                android:hint="@string/name"
                android:background="@drawable/add_client_edit_text_bg"
                android:paddingHorizontal="15dp"
                style="@style/edit_text"
                android:inputType="text"/>
            <TextView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/gender"
                style="@style/label_text"
                android:autofillHints="name"/>
            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="52dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:paddingTop="2dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="25dp"
                    android:layout_marginStart="2dp">
                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/add_client_male"
                        android:button="@android:color/transparent"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="25dp"
                    android:layout_marginStart="15dp">
                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/add_client_female"
                        android:button="@android:color/transparent"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <TextView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/email"
                style="@style/label_text"/>
            <EditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:background="@drawable/add_client_edit_text_bg"
                android:paddingHorizontal="15dp"
                style="@style/edit_text"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"/>
            <TextView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/phone"
                style="@style/label_text"/>
            <EditText
                android:id="@+id/phone"
                android:hint="@string/phone"
                android:background="@drawable/add_client_edit_text_bg"
                android:paddingHorizontal="15dp"
                style="@style/edit_text"
                android:autofillHints="phone"/>
            <TextView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/age"
                style="@style/label_text"/>
            <EditText
                android:id="@+id/age"
                android:hint="@string/age"
                android:background="@drawable/add_client_edit_text_bg"
                android:paddingHorizontal="15dp"
                style="@style/edit_text"
                android:inputType="text"/>
            <TextView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/height"
                style="@style/label_text"/>
            <EditText
                android:id="@+id/height"
                android:hint="@string/height"
                android:background="@drawable/add_client_edit_text_bg"
                android:paddingHorizontal="15dp"
                style="@style/edit_text" />
            <TextView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/weight"
                style="@style/label_text"/>
            <EditText
                android:id="@+id/weight"
                android:hint="@string/weight"
                android:background="@drawable/add_client_edit_text_bg"
                android:paddingHorizontal="15dp"
                style="@style/edit_text" />
            <TextView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/about"
                style="@style/label_text"/>
            <EditText
                android:id="@+id/about"
                android:hint="@string/about"
                android:background="@drawable/add_client_edit_text_bg"
                android:paddingHorizontal="15dp"
                style="@style/edit_text"
                android:inputType="text" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="9dp">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/plan"
                    style="@style/label_text"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <ImageButton
                    android:id="@+id/selectPlan"
                    android:layout_width="88dp"
                    android:layout_height="38dp"
                    android:background="@drawable/add_client_select_btn"
                    android:layout_gravity="end"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="9dp">
                <TextView
                    android:layout_width="55dp"
                    android:layout_height="35dp"
                    android:text="@string/duration"
                    style="@style/label_text"
                    android:layout_gravity="center_vertical"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <ImageButton
                    android:id="@+id/selectDuration"
                    android:layout_width="88dp"
                    android:layout_height="38dp"
                    android:background="@drawable/add_client_select_btn"
                    android:layout_gravity="end"/>
            </LinearLayout>
            <ImageButton
                android:id="@+id/save"
                android:layout_width="177dp"
                android:layout_height="51dp"
                android:background="@drawable/add_client_save_btn"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>