<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="218dp"
    android:layout_height="114dp"
    android:orientation="vertical"
    android:background="@drawable/popup_window_bg">
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:id="@+id/popup_download"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="6dp">
        <ImageView
            android:layout_width="11dp"
            android:layout_height="15dp"
            android:background="@drawable/menu_download_icon"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="13dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:fontFamily="@font/nats_font"
            android:textSize="12sp"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/popup_share"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="16dp"
            android:layout_height="15dp"
            android:background="@drawable/menu_share_icon"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="13dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:fontFamily="@font/nats_font"
            android:textSize="12sp"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/popup_delete"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="10dp"
            android:layout_height="15dp"
            android:background="@drawable/menu_delete_icon"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="13dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:fontFamily="@font/nats_font"
            android:textSize="12sp"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2"/>
</LinearLayout>