<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="15dp">
        <ImageView
            android:id="@+id/dashboard_profile"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/dashboard_dummy_profile"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="65dp"
                android:layout_height="20dp"
                android:text="@string/welcome_back"
                android:fontFamily="@font/nats_font"
                android:textSize="12sp"
                android:layout_marginBottom="-2dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:text="Dr. Strange"
                android:fontFamily="@font/nats_font"
                android:textColor="#000000"
                android:textSize="17sp"
                android:layout_marginTop="-10dp"/>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="45dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="195dp"
            android:elevation="10dp"
            app:cardCornerRadius="6dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/dashboard_rating_bg"
                android:orientation="horizontal">
                <RatingBar
                    android:layout_width="27dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:progressDrawable="@drawable/dashboard_rating_star"
                    style="?android:attr/ratingBarStyleSmall"
                    android:isIndicator="true"
                    android:numStars="2"
                    android:rating="4.8"
                    android:stepSize="2.5"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:textSize="11sp"
                    android:fontFamily="@font/nats_font"
                    android:textColor="#000000"
                    android:text="4.8"
                    android:layout_marginTop="-2dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:text="@string/upcoming_consultations"
            android:fontFamily="@font/nats_font"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_marginTop="-7dp"/>
        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:background="@drawable/dachboard_more_vector"
            android:layout_marginStart="200dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recview_consultation"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="14dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:text="@string/patient_profiles"
            android:fontFamily="@font/nats_font"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_marginTop="-7dp"/>
        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:background="@drawable/dachboard_more_vector"
            android:layout_marginStart="200dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp">
        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/dashboard_add_btn"
            android:layout_marginEnd="6dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recview_patient_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:background="@drawable/dashboard_tab_layout_bg"
        android:layout_marginTop="13dp"
        android:layout_gravity="center_horizontal"/>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/dashboard_tab_layout"
        android:layout_width="208dp"
        android:layout_height="35dp"
        style="@style/eh"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-33dp"
        android:background="@android:color/transparent"
        app:tabBackground="@drawable/dashboard_tab_layout_bg_selector"
        app:tabTextAppearance="@style/dashboard_tab_layout_text"
        app:tabSelectedTextColor="#FFFFFF"
        app:tabTextColor="#1D8BF1"
        app:tabRippleColor="@null"
        app:tabIndicatorHeight="0dp">
        <com.google.android.material.tabs.TabItem
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:text="@string/messages"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:text="@string/reports"/>
    </com.google.android.material.tabs.TabLayout>
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/dashboard_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="13dp"
        android:layout_marginStart="17dp"/>
</LinearLayout>